Fixed resolution issues on smaller displays and github positioning

--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ body {
     display: grid;
     position:absolute;
     z-index:1;
-    width:100vw;
-    height: 100vh;
+    width: 100vw;
+    height: 95vh;
     grid-gap: 0px;
     place-content: center;
 }
